// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Form loading next step 1`] = `
<div>
  <form
    class="form"
  >
    <div
      class="form__steps"
    >
      <div
        id="Step"
      />
      <div
        id="Step"
      />
      <div
        class="ui-loader"
      />
    </div>
  </form>
</div>
`;

exports[`containers/Form not loading next step 1`] = `
<div>
  <form
    class="form"
  >
    <div
      class="form__steps"
    >
      <div
        id="Step"
      />
      <div
        id="Step"
      />
    </div>
  </form>
</div>
`;

exports[`containers/Form with active step 1`] = `
<div>
  <form
    class="form"
  >
    <div
      class="form__steps"
    >
      <div
        id="Step"
      />
      <div
        id="Step"
      />
    </div>
  </form>
</div>
`;
